# blazure-mcp

./: .env.example  .gitignore  LICENSE  PERFORMANCE_FEATURES.md  PKG-INFO  README.md  SECURITY_FEATURES.md  debug_functions.py  debug_security_alerts.py  pyproject.toml  smoke_test.py  test_additional_tools.py  test_auth.py  test_billing_tools.py  test_detailed_resources.py  test_performance_tools.py  test_resource_discovery.py  test_resources.py  test_security_tools.py
mcp_azure_server/: __init__.py  __main__.py  server.py
mcp_azure_server/test_scripts/: debug_functions.py  debug_security_alerts.py  run_all_tests.py  smoke_test.py  test_additional_tools.py  test_alerts_monitoring.py  test_auth.py  test_billing_tools.py  test_detailed_resources.py  test_performance_tools.py  test_resource_discovery.py  test_resources.py  test_security_tools.py
test-scripts/: debug_security_alerts.py  test_additional_tools.py  test_performance_tools.py  test_resource_discovery.py
test_scripts/: debug_functions.py  run_all_tests.py  smoke_test.py  test_auth.py  test_billing_tools.py  test_detailed_resources.py  test_resources.py  test_security_tools.py
