[project]
name = "mcp-blazure-server"
version = "0.1.0"
description = "MCP server for Azure Server integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-blazure-server = "mcp_azure_server.__init__:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/luigbi/blazure-mcp"
"Bug Tracker" = "https://github.com/luigbi/blazure-mcp/issues"
